// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dividends should match snapshot when data is loaded successfully 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root"
    style="display: table;"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="makeStyles-wrapper-20 MuiBox-root css-0"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg css-127nfur-MuiContainer-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-container-18 css-1vpwcmr-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container makeStyles-header-17 css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item css-i6prtc-MuiGrid-root"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2 makeStyles-title-21 css-rldqdm-MuiTypography-root"
                >
                  Dividends
                </h2>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <nav
                class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-128kl2r-MuiTypography-root-MuiBreadcrumbs-root"
              >
                <ol
                  class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
                />
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-12aw9rk"
      />
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-p03apy-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-12aw9rk"
        />
        <div
          class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 makeStyles-root-27 MuiAccordion-root MuiAccordion-rounded MuiAccordion-gutters css-1m8eno4-MuiPaper-root-MuiAccordion-root"
        >
          <div
            aria-expanded="false"
            class="MuiButtonBase-root makeStyles-summaryWrapper-28 MuiAccordionSummary-root MuiAccordionSummary-gutters css-sh22l5-MuiButtonBase-root-MuiAccordionSummary-root"
            role="button"
            tabindex="0"
          >
            <div
              class="makeStyles-summaryContent-29 MuiAccordionSummary-content MuiAccordionSummary-contentGutters css-o4b71y-MuiAccordionSummary-content"
            >
              <p
                class="MuiTypography-root MuiTypography-body1 makeStyles-summary-30 css-1okvd07-MuiTypography-root"
              >
                Dividends
              </p>
            </div>
            <div
              class="MuiAccordionSummary-expandIconWrapper css-yw020d-MuiAccordionSummary-expandIconWrapper"
            >
              <svg
                aria-hidden="true"
                class="MuiSvgIcon-root MuiSvgIcon-colorPrimary MuiSvgIcon-fontSizeMedium css-1cbajxi-MuiSvgIcon-root"
                data-testid="KeyboardArrowDownIcon"
                focusable="false"
                viewBox="0 0 24 24"
              >
                <path
                  d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6 1.41-1.41z"
                />
              </svg>
            </div>
          </div>
          <div
            class="MuiCollapse-root MuiCollapse-vertical MuiCollapse-hidden css-bz4dnt-MuiCollapse-root"
            style="min-height: 0px;"
          >
            <div
              class="MuiCollapse-wrapper MuiCollapse-vertical css-smkl36-MuiCollapse-wrapper"
            >
              <div
                class="MuiCollapse-wrapperInner MuiCollapse-vertical css-9l5vo-MuiCollapse-wrapperInner"
              >
                <div
                  class="MuiAccordion-region"
                  role="region"
                >
                  <div
                    class="makeStyles-detailsWrapper-31 MuiAccordionDetails-root css-15v22id-MuiAccordionDetails-root"
                  >
                    <div
                      class="MuiTableContainer-root css-rorn0c-MuiTableContainer-root"
                    >
                      <table
                        class="MuiTable-root css-7mlt34-MuiTable-root"
                      >
                        <thead
                          class="MuiTableHead-root css-15wwp11-MuiTableHead-root"
                        >
                          <tr
                            class="MuiTableRow-root MuiTableRow-head css-8dfetm-MuiTableRow-root"
                          >
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-headColumn-32 css-1efwvfh-MuiTableCell-root"
                              scope="col"
                            >
                              Date
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-headColumn-32 css-1efwvfh-MuiTableCell-root"
                              scope="col"
                            >
                              Token
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-headColumn-32 css-1efwvfh-MuiTableCell-root"
                              scope="col"
                            >
                              Dividend Per Share
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-headColumn-32 css-1efwvfh-MuiTableCell-root"
                              scope="col"
                            >
                              Number of Token
                            </th>
                            <th
                              class="MuiTableCell-root MuiTableCell-head MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-headColumn-32 css-1v6mra9-MuiTableCell-root"
                              scope="col"
                            >
                              Total Amount
                            </th>
                          </tr>
                        </thead>
                        <tbody
                          class="MuiTableBody-root css-apqrd9-MuiTableBody-root"
                        >
                          <tr
                            class="MuiTableRow-root makeStyles-row-37 makeStyles-row-42 css-8dfetm-MuiTableRow-root"
                          >
                            <th
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-sizeMedium makeStyles-column-34 css-17e0zod-MuiTableCell-root"
                              scope="row"
                            >
                              2021-11-10, 03:30 AM
                            </th>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-column-34 css-17e0zod-MuiTableCell-root"
                            >
                              HEHEHI
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-column-34 css-17e0zod-MuiTableCell-root"
                            >
                              1
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignLeft MuiTableCell-sizeMedium makeStyles-column-34 css-17e0zod-MuiTableCell-root"
                            >
                              1,000.00
                            </td>
                            <td
                              class="MuiTableCell-root MuiTableCell-body MuiTableCell-alignRight MuiTableCell-sizeMedium makeStyles-column-34 css-17jaypo-MuiTableCell-root"
                            >
                              1,000.00
                            </td>
                          </tr>
                        </tbody>
                      </table>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dividends should match snapshot when data is undefined 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root"
    style="display: table;"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="makeStyles-wrapper-5 MuiBox-root css-0"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg css-127nfur-MuiContainer-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-container-3 css-1vpwcmr-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container makeStyles-header-2 css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item css-i6prtc-MuiGrid-root"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2 makeStyles-title-6 css-rldqdm-MuiTypography-root"
                >
                  Dividends
                </h2>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <nav
                class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-128kl2r-MuiTypography-root-MuiBreadcrumbs-root"
              >
                <ol
                  class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
                />
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-12aw9rk"
      />
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-p03apy-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-wrapper-12 css-l6hioc-MuiGrid-root"
        style="opacity: 0.75;"
      >
        <div
          class="MuiBox-root css-1jpm9pd"
        />
        <div
          class="MuiBox-root css-12aw9rk"
        />
        <span
          class="MuiCircularProgress-root MuiCircularProgress-indeterminate MuiCircularProgress-colorPrimary css-q79gi7-MuiCircularProgress-root"
          role="progressbar"
          style="width: 40px; height: 40px;"
        >
          <svg
            class="MuiCircularProgress-svg css-1idz92c-MuiCircularProgress-svg"
            viewBox="22 22 44 44"
          >
            <circle
              class="MuiCircularProgress-circle MuiCircularProgress-circleIndeterminate css-176wh8e-MuiCircularProgress-circle"
              cx="44"
              cy="44"
              fill="none"
              r="20.2"
              stroke-width="3.6"
            />
          </svg>
        </span>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-12aw9rk"
        />
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-wrapper-13 css-t0zib5-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-1kgakwq"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-12aw9rk"
            />
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-subtitle-14 css-1b4l2pg-MuiTypography-root"
            >
              This page is empty.
            </p>
            <div
              class="MuiBox-root css-7ieh0i"
            />
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-content-15 css-1b4l2pg-MuiTypography-root"
            >
              There are no records to display for the selected report.
            </p>
            <div
              class="MuiBox-root css-12aw9rk"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dividends should match snapshot when data length is 0 1`] = `
<div>
  <div
    class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column css-1vpwcmr-MuiGrid-root"
    style="display: table;"
  >
    <div
      class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
    >
      <div
        class="makeStyles-wrapper-48 MuiBox-root css-0"
      >
        <div
          class="MuiContainer-root MuiContainer-maxWidthLg css-127nfur-MuiContainer-root"
        >
          <div
            class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-container-46 css-1vpwcmr-MuiGrid-root"
          >
            <div
              class="MuiGrid-root MuiGrid-container makeStyles-header-45 css-11lq3yg-MuiGrid-root"
            >
              <div
                class="MuiGrid-root MuiGrid-container MuiGrid-item css-i6prtc-MuiGrid-root"
              >
                <h2
                  class="MuiTypography-root MuiTypography-h2 makeStyles-title-49 css-rldqdm-MuiTypography-root"
                >
                  Dividends
                </h2>
              </div>
            </div>
            <div
              class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
            >
              <nav
                class="MuiTypography-root MuiTypography-body1 MuiBreadcrumbs-root css-128kl2r-MuiTypography-root-MuiBreadcrumbs-root"
              >
                <ol
                  class="MuiBreadcrumbs-ol css-4pdmu4-MuiBreadcrumbs-ol"
                />
              </nav>
            </div>
          </div>
        </div>
      </div>
      <div
        class="MuiBox-root css-12aw9rk"
      />
    </div>
    <div
      class="MuiContainer-root MuiContainer-maxWidthLg css-p03apy-MuiContainer-root"
    >
      <div
        class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
      >
        <div
          class="MuiBox-root css-12aw9rk"
        />
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-direction-xs-column makeStyles-wrapper-55 css-t0zib5-MuiGrid-root"
        >
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-1kgakwq"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item css-13i4rnv-MuiGrid-root"
          >
            <div
              class="MuiBox-root css-12aw9rk"
            />
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-subtitle-56 css-1b4l2pg-MuiTypography-root"
            >
              This page is empty.
            </p>
            <div
              class="MuiBox-root css-7ieh0i"
            />
            <p
              class="MuiTypography-root MuiTypography-body1 makeStyles-content-57 css-1b4l2pg-MuiTypography-root"
            >
              There are no records to display for the selected report.
            </p>
            <div
              class="MuiBox-root css-12aw9rk"
            />
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
